# netbox-meraki

./: CHANGELOG.md  CONFIGURATION_EXAMPLES.md  ENHANCED_FEATURES.md  EXAMPLES.md  FILE_STRUCTURE.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INSTALLATION_GUIDE.md  INSTALL_FRESH.md  LICENSE  MANIFEST.in  PROJECT_OVERVIEW.sh  QUICKSTART.md  QUICK_REFERENCE.md  README.md  RQ_WORKER_SETUP.md  SCHEDULING.md  SCHEDULING_GUIDE.md  SCHEDULING_IMPLEMENTATION.md  SCHEDULING_QUICKREF.md  SYNC_BEHAVIOR.md  TESTING_GUIDE.md  TRANSFORMATIONS_AND_JOBS.md  UPDATE_SUMMARY.md  VERIFICATION_CHECKLIST.md  VERSION_0.6.0_SUMMARY.md  configuration_example.py  install.sh  install_fresh.sh  main.py  pyproject.toml  reinstall.sh  requirements.txt  setup.sh  setup_scheduler.md  test_deploy.sh
deployment/cron/: meraki-sync-cron.sh
deployment/systemd/: netbox-meraki-scheduler-oneshot.service  netbox-meraki-scheduler.service  netbox-meraki-scheduler.timer
docs/images/: README.md
netbox_meraki/: __init__.py  admin.py  forms.py  jobs.py  meraki_client.py  models.py  navigation.py  sync_service.py  urls.py  views.py
netbox_meraki/api/: __init__.py  serializers.py  urls.py  views.py
netbox_meraki/management/commands/: __init__.py  run_scheduled_sync.py  schedule_meraki_sync.py  sync_meraki.py
netbox_meraki/migrations/: 0001_initial.py  0002_add_settings_and_site_rules.py  0003_add_sync_review.py  0004_add_cleanup_stats.py  0005_add_scheduling.py  0006_add_name_transforms.py  0007_enhanced_sync_features.py  0008_add_editable_data.py  0009_add_name_transform_fields.py  0009_add_tag_configuration.py  0010_add_api_performance_settings.py  0011_add_process_unmatched_sites.py  0012_add_prefix_filter_rules.py  0013_add_scheduled_sync_tasks.py  0014_alter_scheduledsynctask_selected_networks.py  0015_add_execution_mode.py  0016_add_sync_components.py
netbox_meraki/templates/netbox_meraki/: base.html  config.html  dashboard.html  job_history.html  prefixfilterrule_confirm_delete.html  prefixfilterrule_form.html  prefixfilterrule_list.html  review_detail.html  review_detail_new.html  review_item_edit.html  review_list.html  scheduled_sync.html  scheduled_sync_edit.html  scheduled_task_edit.html  sitenamerule_confirm_delete.html  sitenamerule_form.html  sitenamerule_list.html  sync.html  synclog.html
netbox_meraki/templatetags/: meraki_extras.py
