[project]
name = "netbox-meraki"
version = "1.1.0"
description = "NetBox plugin for synchronizing Cisco Meraki Dashboard networks, devices, VLANs, and prefixes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]
authors = [
    { name = "Tarani Debnath" }
]
keywords = ["netbox", "meraki", "cisco", "plugin", "network", "automation", "ipam", "dcim"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/tkdebnath/netbox-meraki"
Repository = "https://github.com/tkdebnath/netbox-meraki"
Issues = "https://github.com/tkdebnath/netbox-meraki/issues"
Changelog = "https://github.com/tkdebnath/netbox-meraki/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["netbox_meraki*"]

[tool.setuptools.package-data]
netbox_meraki = ["templates/**/*.html"]
